--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="str_setting">遊戲設定</string>
     <string name="str_pIDDefault">0。unnamed</string>
     <string name="str_loadingDefault">等待玩家中…(1/4)</string>
+    <string name="str_btnTest1">進入牌桌</string>
 
 </resources>
