新增辨別鐵支、同花順功能 待處理 同花順同時為順子問題

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="str_roomPlayerListDefault">玩家：-</string>
     <string name="str_btnTest1">進入牌桌</string>
     <string name="str_exitRoom">退出房間</string>
+    <string name="str_shuffle">洗牌</string>
 
 </resources>
