--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
     <string name="str_startGame">開始遊戲</string>
     <string name="str_setting">遊戲設定</string>
     <string name="str_pIDDefault">0。unnamed</string>
-    <string name="str_showAppStruct"><u>APP架構圖</u></string>
+    <string name="str_showGitHub"><u>APP原始碼(GitHub)</u></string>
+    <string name="str_updateApp"><u>下載最新版本</u></string>
+    <string name="str_showQRCode"><u>顯示最新版本QRCode</u></string>
     <string name="str_loadingDefault">等待玩家中…(-/4)</string>
     <string name="str_roomIDDefault">房間號碼：-</string>
     <string name="str_roomPlayerListDefault">玩家：-</string>
